# PAN

./: .gitignore  Makefile  README.md  UI.py  bin_database.py  build.py  configuration.py  database.py  generate.py  generator.py  import_export.py  main.py  pangen.py  pyproject.toml  requirements.txt  utils.py  validator.py
cpp_src/: CMakeLists.txt
cpp_src/include/fintechx_core/: encryption_utils.hpp  pan_utils.hpp
cpp_src/src/: bindings.cpp  encryption_utils.cpp  pan_utils.cpp
src/api/: api_server.py
src/core/: UI.py  logging_config.py  main.py
src/fintechx_desktop/: main.py
src/fintechx_desktop/app/: auth.py
src/fintechx_desktop/core/: __init__.py  config.py  logging_config.py
src/fintechx_desktop/infrastructure/: database.py
src/fintechx_desktop/ui/: __init__.py  analytics_dashboard_widget.py  main_window.py  virtual_terminal_widget.py
src/payment/: payment_gateway.py  payment_processor.py
src/transaction/: transaction_engine.cpp  transaction_engine.h  transaction_engine_wrapper.py
src/utils/: validator.py
